# sqlformat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md
.cursor/rules/: architecture.mdc  code-testing.mdc  effective-comments.mdc  github-actions.mdc  project-readme.mdc  solid-principles.mdc
.cursor/rules/rust/: rust-best-practices.mdc  rust-ownership-borrowing.mdc
.github/workflows/: sqlformat.yml
benches/: bench.rs
src/: debug.rs  formatter.rs  indentation.rs  inline_block.rs  keywords.rs  lib.rs  main.rs  params.rs  tokenizer.rs
tests/: cli.rs
